--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@safe-global/auth-kit": "^2.0.1",
     "@safe-global/safe-core-sdk-types": "^4.0.0",
     "ethers": "^5.7.2",
